# autopod

./: README.md
autopod_client/: Makefile  README.md  pubspec.yaml
autopod_client/android/app/: build.gradle
autopod_client/android/app/src/debug/: AndroidManifest.xml
autopod_client/android/app/src/main/: AndroidManifest.xml
autopod_client/android/app/src/main/kotlin/com/example/autopod_client/: MainActivity.kt
autopod_client/ios/Flutter/: AppFrameworkInfo.plist
autopod_client/ios/Runner/: Info.plist
autopod_client/ios/Runner.xcodeproj/: project.pbxproj
autopod_client/lib/: editor_page.dart  main.dart  note.dart  post.dart
autopod_client/lib/src/: cli.dart  client.dart
autopod_client/test/: widget_test.dart
autopod_server/: Cargo.toml  build.rs
autopod_server/src/: lib.rs  polly.rs  service.rs
autopod_server/src/pb/: mod.rs  tts.rs
docs/: Makefile
docs/assets/: custom.css
docs/slides/hackathon/: hackathon.md
protos/: tts.proto
